# iroum-ax

./: .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
.moai/: manifest.json
.moai/config/sections/: project.yaml
.moai/db/schema/: initial.sql
.moai/demo/: kepco-poc-walkthrough.md
.moai/project/: interview.md  product.md  progress.md  structure.md  tech.md
.moai/project/codemaps/: README.md  data-flow.md  go-control-plane.md  overview.md  pipelines.md  pkg.md  req-traceability.md
.moai/reports/evaluator/: SPEC-AX-001-cross-validate.md  (+12 more)
.moai/state/: session-memo.md
apps/control-plane/: main.go
docs/adr/: 0001-tdd-with-thorough-harness.md  0002-self-hosted-llm-data-sovereignty.md  0003-abstain-3way-softmax-classifier.md  0004-celery-from-go-redis-direct.md  0005-state-machine-4-states.md  0006-keycloak-oidc-provider.md  0007-cli-anonymous-fallback.md  README.md
docs/demo/: quickstart.md
pipelines/: __init__.py  main.py
pipelines/auth/: __init__.py  dependencies.py  errors.py  models.py  validator.py
pipelines/config/: __init__.py  models.py  settings.py
pipelines/generation/: __init__.py  llm_client.py  prompt_builder.py  report_drafter.py  style_applier.py
pipelines/ingestion/: __init__.py  hwp_parser.py  language_detector.py  pdf_parser.py  table_extractor.py  vlm_processor.py
pipelines/mapping/: __init__.py  criterion_parser.py  embedding_service.py  retriever.py  vector_store.py
pipelines/recommendation/: __init__.py  content_suggester.py  gap_analyzer.py  prioritizer.py
pipelines/scoring/: __init__.py  benchmark_learner.py  grade_predictor.py  scenario_simulator.py
pipelines/scripts/: gen_synthetic_data.py  run_demo.py
pipelines/workers/: __init__.py
pkg/auth/: claims.go
pkg/errors/: __init__.py  custom_errors.py
pkg/logging/: __init__.py  logger.py
pkg/models/: __init__.py  criterion.py  document.py  recommendation.py  report.py  simulation.py
schemas/openapi/: openapi.yaml
schemas/proto/: buf.yaml  criterion.proto  document.proto  recommendation.proto  report.proto  simulation.proto  workflow.proto
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_req_auth_003_python_middleware.py  test_req_ax_001_hwp_parser.py  test_req_ax_001_integration.py  test_req_ax_001_pdf_parser.py  test_req_ax_001_table_extractor.py  test_req_ax_001_vlm_processor.py  test_req_ax_002_criterion_parser.py  test_req_ax_002_embedding_service.py  test_req_ax_002_integration.py  test_req_ax_002_retriever.py  test_req_ax_002_vector_store.py  test_req_ax_003_benchmark_learner.py  test_req_ax_003_grade_predictor.py  test_req_ax_003_integration.py  test_req_ax_003_scenario_simulator.py  test_req_ax_004_integration.py  test_req_ax_004_llm_client_generate.py  test_req_ax_004_prompt_builder.py  test_req_ax_004_report_drafter.py  test_req_ax_004_style_applier.py  test_req_ax_005_content_suggester.py  test_req_ax_005_gap_analyzer.py  test_req_ax_005_integration.py  test_req_ax_005_prioritizer.py  test_req_ubi_audit_logging.py  test_req_ubi_data_sovereignty.py  test_req_ubi_korean_language.py  test_req_ubi_sandbox_user_default.py
(+206 files in other folders)
